--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
 
                 <figcaption class="product-dec">
                     <p id ="product">
-                        Perfume
+                        PERFUME
                     </p>
                     <p id="p-name">
                         Gabrielle Essence Eau Da parfum
                     </p>
                     <p id="description">
                         A floral, solar and voluptous interpretation composed by Olivier polge, perfumer-creator for the house of CHANEL.
-
                     </p>
-                    <p id="price">
-                        $149.99 <span>$169.99</span>
+                    <p class="price">
+                        <span id="price">
+                            $149.99
+                        </span> 
+                        <span id="slash">$169.99</span>
                     </p>
                     <button id="cart">
                         <img src="product-preview-card-component-main/images/icon-cart.svg" alt="cart-icon">
